--- a/pl_client/src/App.css
+++ b/pl_client/src/App.css
@@ -20,12 +20,61 @@
       0 0 151px #f09; 
 }
 
+.gallery {
+  display: inline-block;
+  box-shadow:  
+      0 0 2px #fff,
+      0 0 4px #fff,
+      0 0 6px #fff,
+      0 0 8px #f09,
+      0 0 10px #f09,
+      0 0 12px #f09,
+      0 0 14px #f09,
+      0 0 16px #f09;
+}
+
 .image {
-  max-width: 300px;
+  transition: all .8s ease-in-out;
+  max-width: 225px;
+  border: black;
+  border-style: solid;
+}
+
+.image:hover{
+  transform: scale(2.0);
+  transform-style:flat;
+}
+
+.upper-image {
+  transition: all .8s ease-in-out;
+  max-width: 225px;
+  border: black;
+  border-style: solid;
+}
+
+.upper-image:hover{
+  transform: translate(0, 50%) scale(2.0);
+  transform-style:flat;
+}
+
+.lower-image {
+  transition: all .8s ease-in-out;
+  max-width: 225px;
+  border: black;
+  border-style: solid;
+}
+
+.lower-image:hover{
+  transform: translate(0, -50%) scale(2.0);
+  transform-style:flat;
 }
 
 label, input {
   margin-bottom: 15px;
+}
+
+.landing-image{
+  max-width: 500px;
 }
 
 .landing {
