styling text app-wide

--- a/pl_client/src/App.css
+++ b/pl_client/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  padding-bottom: 50px;
+  padding-top: 20px;
   text-align: center;
   background-color: black;
   background-size:contain;
@@ -10,9 +12,9 @@
   font-family: 'Courier New', Courier, monospace;
   padding-bottom: 20px;
   text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
+      0 0 25px #fff,
+      0 0 35px #fff,
+      0 0 45px #fff,
       0 0 42px #f09,
       0 0 82px #f09,
       0 0 92px #f09,
@@ -89,6 +91,7 @@ label, input {
 
 .navbar {
   padding: 15px;
+  padding-bottom: 30px;
   /* background-color: rgb(253, 253, 253);
   opacity: 25%; */
 }
@@ -101,9 +104,9 @@ label, input {
   font-family:monospace;
   font-size: x-large;
   text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
+      0 0 16px #fff,
+      0 0 35px #fff,
+      0 0 55px #fff,
       0 0 42px #f09,
       0 0 82px #f09,
       0 0 92px #f09,
@@ -112,17 +115,28 @@ label, input {
 }
 
 .navlink:hover {
-  color: rgb(0, 255, 255);
+  color: rgb(194, 248, 248);
+}
+
+.show-div{
+  padding: 25px;
+  padding-left: 45px;
+  padding-right: 45px;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.344);
+  border: rgb(138, 138, 138);
+  border-style:dotted;
 }
 
 .show-items{
+  font-size: 25px;
   color: #fff;
   padding-bottom: 30px;
   padding-top: 30px;
   text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
+      /* 0 0 2px #fff,
+      0 0 2px #fff,
+      0 0 3px #fff, */
       0 0 42px #f09,
       0 0 82px #f09,
       0 0 92px #f09,
