--- a/pl_client/src/App.css
+++ b/pl_client/src/App.css
@@ -101,7 +101,7 @@ label, input {
   color: rgb(255, 255, 255);
   padding-left: 50px;
   padding-right: 50px;
-  font-family:monospace;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: x-large;
   text-shadow:
       0 0 16px #fff,
@@ -143,3 +143,8 @@ label, input {
       0 0 102px #f09,
       0 0 151px #f09; 
 }
+
+.youtube-clip{
+  padding: 35px;
+}
+
