--- a/pl_client/src/App.css
+++ b/pl_client/src/App.css
@@ -13,7 +13,7 @@
 .form {
   color: #fff;
   font-family: 'Courier New', Courier, monospace;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
   text-shadow:
       0 0 25px #fff,
       0 0 35px #fff,
@@ -187,6 +187,27 @@ label, input {
       0 0 92px #f09,
       0 0 102px #f09,
       0 0 151px #f09; 
+}
+
+.superfan-name{
+  color: #fff;
+  /* padding-bottom: 5px;
+  padding-top: 5px; */
+  transition: all 2s ease-in-out;
+  display: inline-block;
+  text-shadow:
+      0 0 16px #fff,
+      0 0 35px #fff,
+      0 0 55px #fff,
+      0 0 42px #f09,
+      0 0 82px #f09,
+      0 0 92px #f09,
+      0 0 102px #f09,
+      0 0 151px #f09; 
+}
+
+.superfan-name:hover {
+  transform: rotate(1080deg);
 }
 
 .video-div{
