--- a/pl_client/src/App.css
+++ b/pl_client/src/App.css
@@ -91,7 +91,7 @@ label, input {
 
 .landing-image{
   max-width: 500px;
-  transition: all .6s ease-in-out;
+  transition: all .9s ease-in-out;
   display: inline-block;
 }
 
@@ -107,14 +107,14 @@ label, input {
   padding-bottom: 10px;
   padding-top: 10px;
   text-shadow:
-      0 0 2px #fff,
-      0 0 2px #fff,
-      0 0 3px #fff,
+      0 0 5px #fff,
+      /* 0 0 2px #fff, */
+      /* 0 0 15px #fff, */
       0 0 42px #f09,
-      0 0 82px #f09,
-      0 0 92px #f09,
-      0 0 102px #f09,
-      0 0 151px #f09; 
+      /* 0 0 72px #f09, */
+      /* 0 0 92px #f09, */
+      /* 0 0 102px #f09, */
+      0 0 72px #f09; 
 }
 
 .landing-sub-tag{
@@ -148,18 +148,15 @@ label, input {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: x-large;
   text-shadow:
-      0 0 16px #fff,
-      0 0 35px #fff,
-      0 0 55px #fff,
-      0 0 42px #f09,
-      0 0 82px #f09,
-      0 0 92px #f09,
-      0 0 102px #f09,
-      0 0 151px #f09; 
+      0 0 12px #fff,
+      /* 0 0 15px #fff, */
+      0 0 35px #f09,
+      0 0 55px #f09,
+      0 0 95px #f09; 
 }
 
 .navlink:hover {
-  color: rgb(194, 248, 248);
+  color: rgb(124, 247, 247);
 }
 
 .show-div{
